--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axios-cookiejar-support",
+  "name": "axios-cookiejar-support-react-native",
   "description": "Add tough-cookie support to axios.",
   "license": "MIT",
   "author": "3846masa",
@@ -13,9 +13,6 @@
   },
   "version": "1.0.0",
   "main": "./lib/index",
-  "browser": {
-    "./lib/index": "./noop.js"
-  },
   "files": [
     "index.d.ts",
     "lib",
